Max autoplay overlay z-index to avoid odd stuff

--- a/bigbluebutton-html5/imports/ui/components/media/autoplay-overlay/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/media/autoplay-overlay/styles.scss
@@ -26,6 +26,6 @@
   font-size: var(--font-size-large);
   border-radius: 5px;
   position: absolute;
-  z-index: 1;
+  z-index: 9999;
   text-align: center;
 }
